--- a/src/Game.css
+++ b/src/Game.css
@@ -10,6 +10,8 @@ body {
     left: 50%;
     top: 10%;
     margin-left: -400px;
+    background-color: cornflowerblue;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .panel {
